--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   injectable_generator: ^2.11.1
   cryptography: ^2.9.0
   cryptography_flutter: ^2.3.4
+  auto_route_generator: ^10.4.0
+  auto_route: ^11.1.0
 
 dev_dependencies:
   flutter_test:
