added app startup screen, and bloc to the project

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   cryptography_flutter: ^2.3.4
   auto_route_generator: ^10.4.0
   auto_route: ^11.1.0
+  flutter_bloc: ^9.1.1
+  meta: ^1.17.0
 
 dev_dependencies:
   flutter_test:
