--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   auto_route: ^11.1.0
   flutter_bloc: ^9.1.1
   meta: ^1.17.0
+  theme_tailor: ^3.1.2
+  theme_tailor_annotation: ^3.1.2
 
 dev_dependencies:
   flutter_test:
