implemented tor hidden service instead of tor

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   theme_tailor_annotation: ^3.1.2
   http: ^1.6.0
   dartz: ^0.10.1
+  tor_hidden_service: ^0.0.6
 
 dev_dependencies:
   flutter_test:
