--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   dartz: ^0.10.1
   tor_hidden_service: ^0.0.6
   uuid: ^4.5.2
+  drift: ^2.22.1
+  sqlite3_flutter_libs: ^0.5.28
+  path_provider: ^2.1.5
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +40,7 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   build_runner: ^2.10.4
   hive_ce_generator: ^1.10.1
+  drift_dev: ^2.22.1
 
 flutter:
   uses-material-design: true
