--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   path: ^1.9.1
   qr_flutter: ^4.1.0
   share_plus: ^11.0.0
+  mobile_scanner: ^6.0.2
 
 dev_dependencies:
   flutter_test:
