--- a/lib/local_storage/domain/hive_adapters.g.yaml
+++ b/lib/local_storage/domain/hive_adapters.g.yaml
@@ -5,7 +5,7 @@ nextTypeId: 2
 types:
   User:
     typeId: 0
-    nextIndex: 3
+    nextIndex: 6
     fields:
       username:
         index: 0
@@ -13,9 +13,15 @@ types:
         index: 1
       avatarUrl:
         index: 2
+      registrationId:
+        index: 3
+      identityKeyPairBase64:
+        index: 4
+      identityKeyBase64:
+        index: 5
   Contact:
     typeId: 1
-    nextIndex: 3
+    nextIndex: 5
     fields:
       onionAddress:
         index: 0
@@ -23,3 +29,7 @@ types:
         index: 1
       avatarUrl:
         index: 2
+      identityKeyBase64:
+        index: 3
+      preKeyBundleBase64:
+        index: 4
