--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   mobile_scanner: ^7.1.4
   flutter_native_splash: ^2.4.7
   flutter_launcher_icons: ^0.14.4
+  libsignal_protocol_dart: ^0.7.4
 
 dev_dependencies:
   flutter_test:
