basuc local notifications implementation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_native_splash: ^2.4.7
   flutter_launcher_icons: ^0.14.4
   libsignal_protocol_dart: ^0.7.4
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
