--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   libsignal_protocol_dart: ^0.7.4
   flutter_local_notifications: ^18.0.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
