--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   libsignal_protocol_dart: ^0.7.4
   flutter_local_notifications: ^18.0.1
   url_launcher: ^6.3.1
+  flutter_foreground_task: ^9.1.0
 
 dev_dependencies:
   flutter_test:
