--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
     
     <!-- Permissions for Foreground Task (keeping Tor alive in background) -->
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
-    
+
+    <!-- Permissions for Camera-->
+    <uses-permission android:name="android.permission.CAMERA"/>
+
     <application
         android:label="Whisp"
         android:name="${applicationName}"
