--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   url_launcher: ^6.3.2
   flutter_foreground_task: ^9.1.0
   local_auth: ^3.0.0
+  pinput: ^6.0.1
 
 dev_dependencies:
   flutter_test:
