--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,23 +4,71 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
+        // Google Play flavor (default for development)
         {
-            "name": "flick",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "flick (profile mode)",
+            "name": "whisp (googleplay)",
             "request": "launch",
             "type": "dart",
-            "flutterMode": "profile"
+            "args": [
+                "--flavor",
+                "googleplay",
+                "--dart-define=APP_FLAVOR=googleplay"
+            ]
         },
         {
-            "name": "flick (release mode)",
+            "name": "whisp (googleplay) - profile",
             "request": "launch",
             "type": "dart",
-            "flutterMode": "release"
+            "flutterMode": "profile",
+            "args": [
+                "--flavor",
+                "googleplay",
+                "--dart-define=APP_FLAVOR=googleplay"
+            ]
+        },
+        {
+            "name": "whisp (googleplay) - release",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "release",
+            "args": [
+                "--flavor",
+                "googleplay",
+                "--dart-define=APP_FLAVOR=googleplay"
+            ]
+        },
+        // FOSS flavor (for open source builds)
+        {
+            "name": "whisp (foss)",
+            "request": "launch",
+            "type": "dart",
+            "args": [
+                "--flavor",
+                "foss",
+                "--dart-define=APP_FLAVOR=foss"
+            ]
+        },
+        {
+            "name": "whisp (foss) - profile",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "profile",
+            "args": [
+                "--flavor",
+                "foss",
+                "--dart-define=APP_FLAVOR=foss"
+            ]
+        },
+        {
+            "name": "whisp (foss) - release",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "release",
+            "args": [
+                "--flavor",
+                "foss",
+                "--dart-define=APP_FLAVOR=foss"
+            ]
         }
     ]
 }
